--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/react-router-redux": "^5.0.20",
+    "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components": "^5.1.15",
+    "axios": "^0.24.0",
+    "connected-react-router": "^6.8.0",
+    "enzyme-adapter-react-15": "^1.4.3",
+    "history": "^4.10.1",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
