--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "got-api-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://freqq.github.io/got-api-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -17,6 +18,7 @@
     "axios": "^0.24.0",
     "connected-react-router": "^6.8.0",
     "enzyme-adapter-react-15": "^1.4.3",
+    "gh-pages": "^3.2.3",
     "history": "^4.10.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
@@ -36,7 +38,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
