--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "got-api-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://freqq.github.io/got-api-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,7 +17,6 @@
     "axios": "^0.24.0",
     "connected-react-router": "^6.8.0",
     "enzyme-adapter-react-15": "^1.4.3",
-    "gh-pages": "^3.2.3",
     "history": "^4.10.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
@@ -38,9 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
