--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@types/react-router-redux": "^5.0.20",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
+    "@types/redux-mock-store": "^1.0.3",
     "axios": "^0.24.0",
+    "axios-mock-adapter": "^1.20.0",
     "connected-react-router": "^6.8.0",
     "enzyme-adapter-react-15": "^1.4.3",
     "history": "^4.10.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
+    "redux-mock-store": "^1.5.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
