--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.2",
     "@types/react-router-redux": "^5.0.20",
-    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "@types/redux-mock-store": "^1.0.3",
     "axios": "^0.24.0",
     "axios-mock-adapter": "^1.20.0",
     "connected-react-router": "^6.8.0",
-    "enzyme-adapter-react-15": "^1.4.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "history": "^4.10.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
